<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2"
    android:background = "@drawable/meufundo">


    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/texto_titulo1M"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="50dp"
        android:text="@string/Texto_1P1M"
        android:textSize="16dp" />

    <TextView
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="15dp"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/Texto_2P1M"/>


    <TextView
        android:id="@+id/textView5"
        android:textStyle="bold|italic"
        android:layout_marginTop="130dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Texto_pergunta1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFechar1"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1
"
            android:layout_gravity="left|bottom"
            android:text="@string/texto_nao1M" />

        <Button
            android:id="@+id/btnSeguir1"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/texto_sim1M" />

    </LinearLayout>
</LinearLayout>