<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tela_10Mandamentos"
    android:background = "@drawable/meufundo">


    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/texto_titulo_10M"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="50dp"
        android:text="@string/texto_1P10M"
        android:textSize="16dp" />

    <TextView
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="15dp"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/texto_2P10M"/>


    <TextView
        android:id="@+id/textView5"
        android:textStyle="bold|italic"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_pergunta2M" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFechar10"
                android:layout_marginTop="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left|bottom"
                android:text="@string/texto_nao_2M" />

            <Button
                android:id="@+id/btnSeguir10"
                android:layout_marginTop="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="@string/texto_sim_2M" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>