<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/txvTitulo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginRight="5dp"
                android:id="@+id/img1M"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:src="@drawable/mandamento" />

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv1M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_1_Mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais1"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginRight="5dp"
                android:id="@+id/img2M"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:src="@drawable/number2" />

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv2M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto_2_Mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais2"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3M"
                android:layout_width="94dp"
                android:layout_height="55dp"
                android:src="@drawable/mandamento3" />

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv3M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_3_Mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais3"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img4M"
                android:layout_width="94dp"
                android:layout_height="55dp"
                android:src="@drawable/mandamento4"/>

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv4M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_4_Mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais4"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img5M"
                android:layout_width="94dp"
                android:layout_height="55dp"
                android:src="@drawable/mandamento5"  />

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv5M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_5_Mandamentos" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais5"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img6M"
                android:layout_width="94dp"
                android:layout_height="55dp"
                android:src="@drawable/mandamento6" />

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv6M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_6_mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais6"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img7M"
                android:layout_width="94dp"
                android:layout_height="55dp"
                android:src="@drawable/mandamento7" />

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv7M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_7_Mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais7"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img8M"
                android:layout_width="94dp"
                android:layout_height="55dp"
                android:src="@drawable/mandamento8" />

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv8M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_8_Mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais8"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img9M"
                android:layout_width="94dp"
                android:layout_height="55dp"
                android:src="@drawable/mandamento9"/>

            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv9M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_9_Mandamento" />

            </LinearLayout>

            <Button
                android:textSize="10dp"
                android:id="@+id/btnVerMais9"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/botao_ver_mais" />



        </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img10M"
                    android:layout_width="94dp"
                    android:layout_height="55dp"
                    android:src="@drawable/mandamento10" />

                <LinearLayout
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txv10M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_10_Mandamento" />

                </LinearLayout>

                <Button
                    android:textSize="10dp"
                    android:id="@+id/btnVerMais10"
                    android:layout_width="71dp"
                    android:layout_height="50dp"
                    android:text="@string/botao_ver_mais" />


            </LinearLayout>


    </LinearLayout>